# F20DP_CWK2_MPI

./: CMakeLists.txt  SumTotient.c
Analysis/: Analysis.py
Analysis/Benchmarks/: benchmark_100000.csv  benchmark_100000_dynamic.csv  benchmark_15000.csv  benchmark_15000_dynamic.csv  benchmark_30000.csv  benchmark_30000_dynamic.csv  bm.sh  seq.csv
